--- a/src/index.css
+++ b/src/index.css
@@ -26,16 +26,18 @@ a:hover {
   color: #535bf2;
 }
 
-html {
-  scrollbar-gutter: stable;
+
+html body[data-scroll-locked] {
+  overflow-y: scroll !important;
+  margin-right: 0px !important;
 }
 
 body {
   margin: 0;
-  width: 100vw; /* Ensure full width */
   height: 100vh; /* Ensure full height */
   display: flex;
   flex-direction: column; /* Column layout to stack elements */
+  overflow-y: scroll !important;
 }
 
 h1 {
